--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Personal Page</title>
+    <title>NonsoBarn | Task1</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="frame">
-    <div class="profile">
-      <h1 data-testid="slackUserName">Nonso Barn</h1>
-      <img src="nonso.jpg" alt="Nonso Barn" data-testid="slackDisplayImage" />
-      <p data-testid="currentDayOfTheWeek"></p>
-      <p data-testid="currentUTCTime"></p>
-      <p data-testid="myTrack">Frontend</p>
-      <a
-        href="https://github.com/your-username/your-repo"
-        data-testid="githubURL"
-        >GitHub Repository</a
-      >
+      <div class="profile">
+        <h1 data-testid="slackUserName">Nonso Barn</h1>
+        <img src="nonso.jpg" alt="Nonso Barn" data-testid="slackDisplayImage" />
+        <p data-testid="currentDayOfTheWeek"></p>
+        <p data-testid="currentUTCTime"></p>
+        <p data-testid="myTrack">Frontend</p>
+        <a
+          href="https://github.com/NonsoBarn/HNGX_FRONTENDTRACK_STAGEONETASK"
+          target="_blank"
+          data-testid="githubURL"
+          >GitHub Repository</a
+        >
+      </div>
     </div>
-</div>
     <script src="script.js"></script>
   </body>
 </html>
