--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <div class="frame">
       <div class="profile">
         <h1 data-testid="slackUserName">Nonso Barn</h1>
-        <img src="nonso.jpg" alt="Nonso Barn" data-testid="slackDisplayImage" />
+        <img
+          src="https://ca.slack-edge.com/T05FFAA91JP-U05RD192RC6-13b24b072ac0-512"
+          alt="Nonso Barn"
+          data-testid="slackDisplayImage"
+        />
         <p data-testid="currentDayOfTheWeek"></p>
         <p data-testid="currentUTCTime"></p>
         <p data-testid="myTrack">Frontend</p>
